--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "zstd_test"
-path = "src/zstd_test.rs"
-
-[[bin]]
-name = "lz4_test"
-path = "src/lz4_test.rs"
+name = "benchmark"
+path = "src/main.rs"
 
 [dependencies]
 cudarc = { version = "0.17", features = ["cuda-12060"] }
@@ -19,6 +15,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 rand = "0.8"
 bytesize = "1.3"
+clap = { version = "4.5", features = ["derive"] }
 
 [build-dependencies]
 bindgen = "0.72"
